[package]
authors = ["Arve Knudsen <arve.knudsen@gmail.com>"]
edition = "2018"
name = "sql-schema-describer"
version = "0.1.0"

[features]
mssql = ["quaint/single-mssql", "barrel/mssql"]

[dependencies]
async-trait = "0.1.17"
chrono = {version = "0.4"}
once_cell = "1.3"
prisma-value = {path = "../prisma-value"}
regex = "1.2"
rust_decimal = {git = "https://github.com/pimeys/rust-decimal", branch = "pgbouncer-mode"}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
thiserror = "1.0.16"
tracing = "0.1"

[dependencies.quaint]
features = ["single-postgresql", "single-mysql", "single-sqlite", "serde-support"]
git = "https://github.com/prisma/quaint"

[dev-dependencies]
anyhow = "1.0.28"
barrel = {git = "https://github.com/prisma/barrel", features = ["sqlite3", "mysql", "pg"], branch = "mssql-support"}
futures = "0.3"
pretty_assertions = "0.6"
test-macros = {path = "../test-macros", features = ["mssql"]}
test-setup = {path = "../test-setup", features = ["mssql"]}
tokio = {version = "=0.2.13", features = ["rt-threaded", "macros"]}
